# biblias

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.Rmd  README.md  pyproject.toml
.github/workflows/: release.yml  stats.yml
R/: corrigir-template.R  globals.R  obter-biblias.R  traduzir-biblias.R
data-raw/: corrigir-NAA.R  workflow.R
data/corrections/: ACF.json  AS21.json  JFAA.json  KJA.json  KJF.json
data/stats/: downloads.csv
data/worklist/: ACF.md  ALM1911.md  ARA.md  ARC.md  AS21.md  BLIVRE.md  CNBB.md  JFAA.md  KJA.md  KJF.md  MENS.md  NAA.md  NBV.md  NTJud.md  NTLH.md  NVI.md  NVT.md  OL.md  TB.md  VFL.md
inst/json/: ACF.json  ARA.json  ARC.json  AS21.json  JFAA.json  KJF.json  (+4 more)
man/: baixar_biblias.Rd  biblia_sql2json.Rd  conversao_biblias.Rd  corrigir_capitulo_usx.Rd  corrigir_usx.Rd  gerar_id_biblia.Rd  ler_biblia.Rd  necessario_atualizar.Rd  numero_versiculos.Rd  traduzir_biblias.Rd  traduzir_livro.Rd  traduzir_metadata.Rd  traduzir_rvmetadata.Rd  zipar_biblias.Rd
scripts/: update_stats.py
src/: books.py  canon.py  catalog.py  cli.py  corrections.py  model.py  validate.py  versification.py  worklist.py
tests/: test_bolls.py  test_books.py  test_canon.py  test_catalog.py  test_cli.py  test_cli_validate.py  test_corrections.py  test_cross_version.py  test_diff_sources.py  test_exporter_registry.py  test_getbible.py  test_json_exporter.py  test_model.py  test_openlp_sqlite.py  test_registry.py  test_scaffold.py  test_sqlite_exporter.py  test_validate.py  test_versification.py  test_worklist.py  test_zefania.py
(+2312 files in other folders)
