[project]
name = "biblias"
version = "0.1.0"
description = "Toolkit to build Portuguese Bible files (OpenLP SQLite, Zefania) from a canonical source."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "httpx>=0.27",
]

[project.scripts]
biblias = "cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
